# PromptWars

./: .dockerignore  .gitignore  Dockerfile  README.md  implementation_plan.md  project_description.md
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/agent/: graph.py  knowledge_base.json  tools.py
backend/app/api/: routes.py
backend/app/core/: config.py  security.py
backend/app/models/: schemas.py
backend/tests/: test_agent.py  test_api.py  test_production.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: CalendarPage.tsx  ChatInterface.tsx  ResourcesPage.tsx
